<resources>
    <string name="app_name">Notebook</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="delete">Delete</string>
    <string name="sort">Sort</string>
    <string name="back">Back</string>
    <string name="about_app">The application was created with the support of great enthusiasm and for the benefit of all users. Thank you for downloading. Feedback can be sent to kisel1989@mail.ru</string>
    <string name="notebook">Notebook</string>
    <string name="main_screen">Main screen</string>
    <string name="dialog_close_app">Close app</string>
    <string name="dialog_exit_app">Are you sure you want to exit the app?\n</string>
    <string name="dialog_yes_exit_app">Yes</string>
    <string name="dialog_no_exit_app">No</string>
    <string name="dialog_exit">Application closed</string>
    <string name="note_title">Note title</string>
    <string name="_05_08_1989">05.08.1989</string>
    <string name="note_description">Note description</string>
    <string name="add">Add</string>
    <string name="clear">Clear all notes</string>
    <string name="title_of_the_new_note">\"Title of the new note \"</string>
    <string name="description_of_the_new_note">\"Description of the new note \"</string>
    <string name="update">Update</string>
    <string name="save">Save</string>
    <string name="header">Header</string>
    <string name="from_array">from Array</string>
    <string name="from_sp">from SP</string>
    <string name="from_gf">from GF</string>
</resources>