<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_add"
        android:title="@string/add"
        android:icon="@drawable/ic_add_card"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_clear_all"
        android:icon="@android:drawable/ic_notification_clear_all"
        android:orderInCategory="10"
        android:title="@string/clear"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:title="@string/about"
        android:icon="@drawable/ic_about"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_exit"
        android:title="@string/exit"
        android:icon="@drawable/ic_exit"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_sort"
        android:title="@string/sort"
        android:icon="@drawable/ic_baseline_sort_24"
        app:showAsAction="always"/>

</menu>