<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cardViewItem"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/noteTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/note_title"
                android:textSize="@dimen/note_title_text_size" />

            <TextView
                android:id="@+id/noteDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:breakStrategy="balanced"
                android:text="@string/note_description"/>

            <TextView
                android:id="@+id/capital"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_05_08_1989" />

        </LinearLayout>

        <ImageView
            android:id="@+id/noteMenu"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="?selectableItemBackground"
            android:src="@drawable/ic_baseline_more_vert_24" />

    </LinearLayout>

</androidx.cardview.widget.CardView>